--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.5
   dio: ^5.5.0+1
+  flutter_cache_manager: ^3.3.2
 
 dev_dependencies:
   flutter_test:
